--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "@erayreperit/wiki.js",
+  "name": "wiki.js",
   "version": "0.0.1",
   "description": "A simple API wrapper for Wikimedia projects.",
   "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "tsc",
+    "build": "tsup src/index.ts --format cjs,esm --dts",
+    "test": "vitest run",
+    "ci": "npm run lint && npm run test && npm run build"
   },
   "repository": {
     "type": "git",
@@ -22,6 +27,8 @@
   "homepage": "https://github.com/erayreperit/wiki.js#readme",
   "devDependencies": {
     "@types/node": "^20.5.0",
-    "typescript": "^5.1.6"
+    "tsup": "^7.2.0",
+    "typescript": "^5.1.6",
+    "vitest": "^0.34.2"
   }
 }
