--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mwiki.js",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A simple API wrapper for Wikimedia projects.",
   "private": false,
   "main": "dist/index.js",
@@ -25,7 +25,7 @@
   "bugs": {
     "url": "https://github.com/erayreperit/mwiki.js/issues"
   },
-  "homepage": "https://github.com/erayreperit/mwiki.js#readme",
+  "homepage": "https://mwiki.js.org/",
   "devDependencies": {
     "@types/node": "^20.5.0",
     "tsup": "^7.2.0",
